localization: translate comments in config.ini to English

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,26 @@
 [API]
-# آدرس کامل اندپوینت سرور WebAI-to-API
-# مطمئن شوید که به اندپوینت /v1/chat/completions اشاره می کند.
-# اگر سرور شما به صورت لوکال روی پورت پیش فرض (6969 = WebAI-to-API) اجرا می شود:
+# Full URL to your WebAI-to-API server endpoint.
+# Ensure this points to the /v1/chat/completions endpoint.
+# Example for a local server running on the default port (6969 for WebAI-to-API):
 url = http://localhost:6969/v1/chat/completions
 
-# نام مدل رو میتونی از مستندات Gemini API پیدا کنی.
-# "gemini-2.0-flash" یک مدل ساده پیش‌فرض است
+# Model name for the translation API.
+# You can find available model names in your API's documentation (e.g., Gemini API).
+# "gemini-2.0-flash" is a common default model.
 model = gemini-2.0-flash
 
+# Font name to be used in the generated Word document.
+# If left empty or not specified, the script will default to "Arial".
+# Ensure the font is installed on the system where the script runs.
+# Example: Calibri, Times New Roman, Arial
+font_name = Calibri
 
-# prompt = پرامتی که استفاده شده در خود اسکریپت main.py قرار داره و در متغیر translation_prompt میتونی تغییرش بدی.
+# Prompt template for instructing the translation API.
+# IMPORTANT: This template MUST include the following three placeholders:
+#   {source_language} - Will be replaced with the source language name (e.g., "Persian").
+#   {target_language} - Will be replaced with the target language name (e.g., "English").
+#   {text_to_translate} - Will be replaced with the actual text chunk from the PDF.
+#
+# Customize this template to match the expected input format of your API
+# and to guide the model for the desired translation output (e.g., style, tone, verbosity).
+prompt_template = Translate the following text from {source_language} to {target_language}. I need only the translated text itself, without any additional comments, greetings, or the original text repeated. The text to translate is:\n\n```{text_to_translate}```
