translator enhanced to best version

--- a/config.ini
+++ b/config.ini
@@ -1,26 +1,58 @@
 [API]
-# Full URL to your WebAI-to-API server endpoint.
-# Ensure this points to the /v1/chat/completions endpoint.
-# Example for a local server running on the default port (6969 for WebAI-to-API):
 url = http://localhost:6969/v1/chat/completions
+model = gemini-3.0-pro
+font_name = B Nazanin
 
-# Model name for the translation API.
-# You can find available model names in your API's documentation (e.g., Gemini API).
-# "gemini-2.0-flash" is a common default model.
-model = gemini-2.0-flash
+# --- PROMPT TEMPLATE ---
+prompt_template = You are a professional translator translating a **history book** from {source_language} to {target_language}.
+    
+    ### CONTEXT (READ-ONLY) ###
+    The text below is from previous pages. Use it ONLY for context. DO NOT TRANSLATE THIS PART.
+    <<<START OF CONTEXT>>>
+    {context}
+    <<<END OF CONTEXT>>>
+    
+    ### TASK ###
+    Translate the "text_to_translate" value for each JSON object provided below.
+    
+    ### CRITICAL FORMATTING RULES (STRICT) ###
+    
+    1. **NUMBERS (Decimals vs. Thousands):**
+       - ALWAYS use Persian numerals (۰, ۱, ۲, ۳).
+       - **Decimals:** Use a **DOT (.)**. (e.g., "16.8" -> "۱۶.۸").
+       - **Large Integers (4+ digits):** Use a **COMMA (،)** separator. (e.g., "31,000" -> "۳۱،۰۰۰").
+       - **Exception:** Do NOT put commas in Years (e.g., "1950" -> "۱۹۵۰").
 
-# Font name to be used in the generated Word document.
-# If left empty or not specified, the script will default to "Arial".
-# Ensure the font is installed on the system where the script runs.
-# Example: Calibri, Times New Roman, Arial
-font_name = Calibri
+    2. **DATES (Textual Solar Conversion):**
+       - Translate the Gregorian date naturally in the text.
+       - IMMEDIATELY follow it with the Solar Hijri equivalent in brackets `[]`.
+       - **CRITICAL:** Use **Persian Month Names** (Farvardin, Ordibehesht...) for the Solar date.
+       - **Format:** `[Day MonthName Year]`
+       
+       - **Examples:**
+         * "May 25, 1950" -> "۲۵ مه ۱۹۵۰ [۴ خرداد ۱۳۲۹]"
+         * "June 2, 1991" -> "۲ ژوئن ۱۹۹۱ [۱۲ خرداد ۱۳۷۰]"
+         * "1924" -> "۱۹۲۴ [۱۳۰۳]"
+    
+    3. **General Style:**
+       - "Soviet Union" -> "شوروی"
+       - Text direction: RTL.
 
-# Prompt template for instructing the translation API.
-# IMPORTANT: This template MUST include the following three placeholders:
-#   {source_language} - Will be replaced with the source language name (e.g., "Persian").
-#   {target_language} - Will be replaced with the target language name (e.g., "English").
-#   {text_to_translate} - Will be replaced with the actual text chunk from the PDF.
-#
-# Customize this template to match the expected input format of your API
-# and to guide the model for the desired translation output (e.g., style, tone, verbosity).
-prompt_template = Translate the following text from {source_language} to {target_language}. I need only the translated text itself, without any additional comments, greetings, or the original text repeated. The text to translate is:\n\n```{text_to_translate}```
+    4. **FOOTNOTES & CITATIONS (MANDATORY):**
+       - **Translation:** You MUST translate the footnotes (numbered text usually found at the end of the content). Do NOT skip them.
+       - **Terminology:** When a footnote refers to a page number (e.g., "p. 25", "pp. 10-12", "page 5"), you MUST translate it as **"برگ"** (e.g., "برگ ۲۵").
+       - **Format:** Keep the footnote numbering (1, 2, 3...) intact.
+
+    ### OUTPUT FORMAT ###
+    - Return ONLY a raw JSON list.
+    - Preserve "page_id".
+    - No markdown formatting.
+
+    ### DATA TO TRANSLATE ###
+    {json_data}
+
+[SETTINGS]
+max_concurrent_workers = 3
+max_chars_per_batch = 12000
+max_retries = 3
+initial_retry_delay = 2
